apps/plane/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-admin-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-admin
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-admin
    spec:
      containers:
        - name: plane-admin
          imagePullPolicy: Always
          image: makeplane/plane-frontend:stable
          stdin: true
          tty: true
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          command:
            - node
          args:
            - admin/server.js
            - admin
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-api-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-api
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-api
    spec:
      containers:
        - name: plane-api
          imagePullPolicy: Always
          image: makeplane/plane-backend:stable
          stdin: true
          tty: true
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          command:
            - ./bin/docker-entrypoint-api.sh
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-beat-worker-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-beat-worker
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-beat-worker
    spec:
      containers:
        - name: plane-beat-worker
          imagePullPolicy: Always
          image: makeplane/plane-backend:stable
          stdin: true
          tty: true
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          command:
            - ./bin/docker-entrypoint-beat.sh
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-space-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-space
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-space
    spec:
      containers:
        - name: plane-space
          imagePullPolicy: Always
          image: makeplane/plane-space:stable
          stdin: true
          tty: true
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          command:
            - node
          args:
            - space/server.js
            - space
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-web-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-web
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-web
    spec:
      containers:
        - name: plane-web
          imagePullPolicy: Always
          image: makeplane/plane-frontend:stable
          stdin: true
          tty: true
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          command:
            - node
          args:
            - web/server.js
            - web
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-worker-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-worker
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-worker
    spec:
      containers:
        - name: plane-worker
          imagePullPolicy: Always
          image: makeplane/plane-backend:stable
          stdin: true
          tty: true
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          command:
            - ./bin/docker-entrypoint-worker.sh
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account

---
