apps/plane/base/stateful-set.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: plane
  name: plane-redis-wl
spec:
  selector:
    matchLabels:
      app.name: plane-redis
  serviceName:  plane-redis
  template:
    metadata:
      labels:
        app.name: plane-redis
    spec:
      containers:
        - image: valkey/valkey:8.0.1-alpine
          imagePullPolicy: Always
          name: plane-redis
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /data
              name: plane-redis-data
      volumes:
        - name: plane-redis-data
          persistentVolumeClaim:
            claimName: plane-redis-pvc
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
