apps/plane/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-admin
  labels:
    app.name: plane-admin
spec:
  clusterIP: None
  ports:
    - name: admin-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.name: plane-admin
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-api
  labels:
    app.name: plane-api
spec:
  clusterIP: None
  ports:
    - name: api-8000
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.name: plane-api
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-space
  labels:
    app.name: plane-space
spec:
  clusterIP: None
  ports:
    - name: space-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.name: plane-space
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-web
  labels:
    app.name: plane-web
spec:
  clusterIP: None
  ports:
    - name: web-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.name: plane-web
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-redis
  labels:
    app.name: plane-redis
spec:
  clusterIP: None
  ports:
    - name: redis-6379
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app.name: plane-redis
