apps/plane/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: plane
  name: plane-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: plane.cluster.edward.sydney
      http:
        paths:
          - backend:
              service:
                port:
                  number: 3000
                name: plane-web
            path: /
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 8000
                name: plane-api
            path: /api
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 8000
                name: plane-api
            path: /auth
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 3000
                name: plane-space
            path: /spaces
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 3000
                name: plane-admin
            path: /god-mode
            pathType: Prefix
